fixed underline style stretching on buttons

--- a/sandbox/buttons.css
+++ b/sandbox/buttons.css
@@ -1,5 +1,4 @@
 Button {
-    padding-left: 1;
-    padding-right: 1;
-    width:30;
+    
+    width:100%;
 }
